padding syntax fix

--- a/css/global.css
+++ b/css/global.css
@@ -43,7 +43,7 @@ margin-top: calc(0px - 4rem);
 footer {
     background-color: #2D2D2F;
     align-items: center;
-    padding: 4rem 0 4rem 0;
+    padding: 4rem 0;
     width: 100%;
 }
 
